@@ -6,6 +6,7 @@ import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
 import org.bukkit.event.player.PlayerCommandPreprocessEvent;
 
+import java.util.Collections;
 import java.util.List;
 
 public class CommandBlocker implements Listener {
@@ -21,24 +22,27 @@ public class CommandBlocker implements Listener {
 
     public void reload() {
         loadConfigValues();
-
     }
 
     private void loadConfigValues() {
         ConfigurationSection section = plugin.getConfig().getConfigurationSection("blocked-commands");
 
-        if (section != null) {
-            this.blockedCommands = section.getStringList("list");
-            this.blockedMessage = ChatColor.translateAlternateColorCodes('&',
-                    section.getString("blocked-message", "&cThis command is blocked by StrictCraft."));
+        if (section != null && section.isSet("list")) {
+            List<String> list = section.getStringList("list");
+            this.blockedCommands = (list != null && !list.isEmpty()) ? list : Collections.emptyList();
         } else {
-            this.blockedCommands = List.of();
-            this.blockedMessage = ChatColor.RED + "This command is blocked by StrictCraft.";
+            this.blockedCommands = Collections.emptyList();
         }
+
+        this.blockedMessage = ChatColor.translateAlternateColorCodes('&',
+                section != null ? section.getString("blocked-message", "&cThis command is blocked by StrictCraft.")
+                        : "&cThis command is blocked by StrictCraft.");
     }
 
     @EventHandler
     public void onPlayerCommand(PlayerCommandPreprocessEvent event) {
+        if (blockedCommands == null || blockedCommands.isEmpty()) return;
+
         String message = event.getMessage().toLowerCase().trim();
         String playerName = event.getPlayer().getName();
 
@@ -47,7 +51,8 @@ public class CommandBlocker implements Listener {
         if (event.getPlayer().hasPermission("strictcraft.bypass")) return;
 
         for (String cmd : blockedCommands) {
-            if (message.equals(cmd) || message.startsWith(cmd + " ")) {
+            String normalized = cmd.toLowerCase().trim();
+            if (message.equals(normalized) || message.startsWith(normalized + " ")) {
                 event.setCancelled(true);
                 event.getPlayer().sendMessage(blockedMessage);
                 return;
